ADD: kata 9 solved